--- a/ARwatch.html
+++ b/ARwatch.html
@@ -21,14 +21,18 @@
       <article class="panel">
 
         <header>
-          <p><a class="alink"href="https://patchgi.github.io/">HOME</a> > <a class="alink" href="https://patchgi.github.io#work">WORK</a> > aniQ</p>
-          <h1>aniQ (2016~)</h1>
-          <p>インターネット上で配信されているアニメのキュレーションサービス</p>
+          <p><a class="alink"href="https://patchgi.github.io/">HOME</a> > <a href="https://patchgi.github.io#work">WORK</a> > ARwatch</p>
+          <h1>Lightalk (2014~)</h1>
+          <p>「音声」と「光」を同期したプレゼンテーションシステム</p>
           <div align="center">
-            <img src="https://github.com/patchgi/aniQ/blob/master/ss.png?raw=true" width="75%" >
+            <img src="images/lightalk.png" width="75%" >
           </div>
         </header>
       </article>
+
+
+
+
       <!-- Footer -->
       <div id="footer">
         <ul class="copyright">
