--- a/lightalk.html
+++ b/lightalk.html
@@ -21,7 +21,7 @@
       <article class="panel">
 
         <header>
-          <p><a href="https://patchgi.github.io/">HOME</a> > <a href="https://patchgi.github.io#work">WORK</a> > Lightalk</p>
+          <p><a class="alink" href="https://patchgi.github.io/">HOME</a> > <a  class="alink" href="https://patchgi.github.io#work">WORK</a> > Lightalk</p>
           <h1>Lightalk (2014~)</h1>
           <p>「音声」と「光」を同期したプレゼンテーションシステム</p>
           <div align="center">
