--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 											<a href="./lightalk.html" class="image fit"><img src="images/lightalk.png" alt="" width = "260px" height = "187px"></a>
 										</div>
 										<div class="4u$ 12u$(mobile)">
+											<a href="./ARwatch.html" class="image fit"><img src="https://github.com/patchgi/aniQ/blob/master/ss.png?raw=true" alt=""　width = "260px" height = "187px"></a>
+										</div>
+										<div class="4u$ 12u$(mobile)">
 											<a href="./aniQ.html" class="image fit"><img src="https://github.com/patchgi/aniQ/blob/master/ss.png?raw=true" alt=""　width = "260px" height = "187px"></a>
 										</div>
 
