--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 								<section>
 									<div class="row">
 										<div class="4u 12u$(mobile)">
-											<a href="./lightalk.html" class="image fit"><img src="images/lightalk.png" alt="" width = "260px" height = "187px"></a>
+											<a href="./lightalk.html" class="image fit"><img src="images/lightalk.png" alt="" ></a>
 										</div>
 										<div class="4u$ 12u$(mobile)">
-											<a href="./ARwatch.html" class="image fit"><img src="https://github.com/patchgi/aniQ/blob/master/ss.png?raw=true" alt=""　width = "260px" height = "187px"></a>
+											<a href="./ARwatch.html" class="image fit"><img src="https://github.com/patchgi/aniQ/blob/master/ss.png?raw=true" alt=""　></a>
 										</div>
 										<div class="4u$ 12u$(mobile)">
-											<a href="./aniQ.html" class="image fit"><img src="https://github.com/patchgi/aniQ/blob/master/ss.png?raw=true" alt=""　width = "260px" height = "187px"></a>
+											<a href="./aniQ.html" class="image fit"><img src="https://github.com/patchgi/aniQ/blob/master/ss.png?raw=true" alt=""　></a>
 										</div>
 
 									</div>
