--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 										<div class="4u$ 12u$(mobile)">
 											<a href="./aniQ.html" class="image fit"><img src="https://github.com/patchgi/aniQ/blob/master/ss.png?raw=true" alt=""　></a>
 										</div>
+										<div class="4u$ 12u$(mobile)">
+											<a href="./aniQ.html" class="image fit"><img src="https://github.com/patchgi/aniQ/blob/master/ss.png?raw=true" alt=""　></a>
+										</div>
 
 									</div>
 								</section>
