--- a/index.html
+++ b/index.html
@@ -51,21 +51,44 @@
 								<p>
 									これまで作ってきた作品
 								</p>
-								<section>
+								<section style = "float: left;">
 									<div class="row">
 										<div class="4u 12u$(mobile)">
-											<a href="./lightalk.html" class="image fit"><img src="images/lightalk.png" alt="" ></a>
+											<a href="./lightalk.html" class="image fit"><img src="images/lightalk.png" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="./aniQ.html" class="image fit"><img src="images/ss.png" alt=""></a>
 										</div>
 										<div class="4u$ 12u$(mobile)">
-											<a href="./ARwatch.html" class="image fit"><img src="https://github.com/patchgi/aniQ/blob/master/ss.png?raw=true" alt=""　></a>
+											<a href="./ARwatch.html" class="image fit"><img src="images/ss.png" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
 										</div>
 										<div class="4u$ 12u$(mobile)">
-											<a href="./aniQ.html" class="image fit"><img src="https://github.com/patchgi/aniQ/blob/master/ss.png?raw=true" alt=""　></a>
+											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
 										</div>
 										<div class="4u$ 12u$(mobile)">
-											<a href="./aniQ.html" class="image fit"><img src="https://github.com/patchgi/aniQ/blob/master/ss.png?raw=true" alt=""　></a>
+											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
 										</div>
-
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+										</div>
+										<div class="4u$ 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+										</div>
 									</div>
 								</section>
 							</article>
