--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 								<section style = "float: left;">
 									<div class="row">
 										<div class="4u 12u$(mobile)">
-											<a href="./lightalk.html" class="image fit"><img src="images/lightalk.png" alt=""></a>
+											<a href="./lightalk.html" class="image fit"><img src="images/lightalk.png" alt="" ></a>
 										</div>
 										<div class="4u 12u$(mobile)">
 											<a href="./aniQ.html" class="image fit"><img src="images/ss.png" alt=""></a>
 										</div>
 										<div class="4u$ 12u$(mobile)">
-											<a href="./ARwatch.html" class="image fit"><img src="images/ss.png" alt=""></a>
+											<a href="./ARwatch.html" class="image fit"><img src="images/arwatch.png" alt=""></a>
 										</div>
 										<div class="4u 12u$(mobile)">
 											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
