--- a/ARwatch.html
+++ b/ARwatch.html
@@ -22,10 +22,13 @@
 
         <header>
           <p><a class="alink"href="https://patchgi.github.io/">HOME</a> > <a href="https://patchgi.github.io#work">WORK</a> > ARwatch</p>
-          <h1>Lightalk (2014~)</h1>
-          <p>「音声」と「光」を同期したプレゼンテーションシステム</p>
+          <h1>ARwatch (2017~)</h1>
+          <p>物理スクロールすることができるスマートウォッチ</p>
+          <p>Twitterに投げたらたくさんRTいただきすごく嬉しかった</p>
           <div align="center">
-            <img src="images/lightalk.png" width="75%" >
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/g2lwau1TT1c" frameborder="0" allowfullscreen></iframe>
+            <blockquote class="twitter-tweet" data-partner="tweetdeck"><p lang="ja" dir="ltr">授業の課題で作ったAR時計が個人的に気に入ってる<br><br>特にスクロールでアプリを変えれる部分が好き<a href="https://twitter.com/hashtag/CV?src=hash">#CV</a> <a href="https://t.co/57IdWfpbz8">pic.twitter.com/57IdWfpbz8</a></p>&mdash; パッチギ (@patchgi) <a href="https://twitter.com/patchgi/status/819129770910699521">January 11, 2017</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
         </header>
       </article>
