--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 											<a href="./ARwatch.html" class="image fit"><img src="images/arwatch.png" alt=""></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="./milk.html" class="image fit"><img src="images/milk.jpg" alt=""></a>
+											<a href="./milk.html" class="image fit"><img src="images/milk.jpeg" alt=""></a>
 										</div>
 										<div class="4u 12u$(mobile)">
 											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
