--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 											<a href="./ARwatch.html" class="image fit"><img src="images/arwatch.png" alt=""></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="./milk.html" class="image fit"><img src="images/milk.jpeg" alt=""></a>
+											<a href="./milk.html" class="image fit"><img src="images/milk.jpeg" alt="" height="185px"></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											<a href="./emoly.html" class="image fit"><img src="images/emo.png" alt=""></a>
 										</div>
 										<div class="4u$ 12u$(mobile)">
 											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
