--- a/lightalk.html
+++ b/lightalk.html
@@ -24,6 +24,11 @@
           <p><a class="alink" href="https://patchgi.github.io/">HOME</a> > <a  class="alink" href="https://patchgi.github.io#work">WORK</a> > Lightalk</p>
           <h1>Lightalk (2014~)</h1>
           <p>「音声」と「光」を同期したプレゼンテーションシステム</p>
+          <p>学部一年のときの初めての学会発表のプロダクト</p>
+          <ul>
+            <li><a href="http://www.interaction-ipsj.org/proceedings/2015/data/20150226/C66.pdf">インタラクション2015</a></li>
+            <li><a href="http://arch.gugen.jp/contest2014/entry/0081">GUGEN2014</a></li>
+          </ul>
           <div align="center">
             <img src="images/lightalk.png" width="75%" >
           </div>
