--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 											<a href="./emoly.html" class="image fit"><img src="images/emo.png" alt=""></a>
 										</div>
 										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+											<a href="./wired.html" class="image fit"><img src="images/wired.png" alt=""></a>
 										</div>
 										<div class="4u 12u$(mobile)">
 											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
