--- a/wired.html
+++ b/wired.html
@@ -21,23 +21,20 @@
       <article class="panel">
 
         <header>
-          <p><a class="alink" href="https://patchgi.github.io/">HOME</a> > <a class="alink" href="https://patchgi.github.io#work">WORK</a> > emoly</p>
-          <h1>emoly (2016~)</h1>
-          <p><a href="https://emoly.meiji-ncc.tech/">emoly</a></p>
+          <p><a class="alink"href="https://patchgi.github.io/">HOME</a> > <a class="alink" href="https://patchgi.github.io#work">WORK</a> > wired</p>
+          <h1>wired (2017~)</h1>
+          <p>紐を介したユーザインターフェースの設計手法の提案, 試作</p>
           <ul>
-            <li>文章に絵文字を自動で付与するWebアプリ</li>
-            <li>サークル内ハッカソンにて３人チームで作成</li>
-            <li>先輩のkwzrさんの指示の下word2vecの学習用データのTweet300万件とword2vecの部分を担当</li>
+            <li>現在進行中のプロダクト</li>
+            <li>明治大学総合数理学部先端メディアサイエンス学科渡邊研究室2016年度秋期最終成果発表会にて発表</li>
+            <li>詳細はもう少しまってほしい</li>
           </ul>
+
           <div align="center">
-            <img src="images/emo.png" width="75%">
+            <img src="images/wired.png" width="75%" >
           </div>
         </header>
       </article>
-
-
-
-
       <!-- Footer -->
       <div id="footer">
         <ul class="copyright">
