--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<a href="#me" class="icon fa-home active"><span>Home</span></a>
 						<a href="#work" class="icon fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-						<a href="#" class="icon fa-twitter"><span>Twitter</span></a>
+						<a href="https://twitter.com/patchgi" class="icon fa-twitter"><span>Twitter</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -35,7 +35,7 @@
 								<header>
 									<h1>Kosuke Yagi(patchgi)</h1>
 									<p>Meiji University</p>
-									<p></p>
+									<p>WatanabeLab</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
@@ -71,24 +71,6 @@
 										<div class="4u$ 12u$(mobile)">
 											<a href="./wired.html" class="image fit"><img src="images/wired.png" alt=""></a>
 										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-										</div>
 									</div>
 								</section>
 							</article>
@@ -120,7 +102,8 @@
 									</div>
 								</form>
 							</article>
-]
+
+
 					</div>
 
 				<!-- Footer -->
