--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 							<article id="me" class="panel">
 								<header>
 									<h1>Kosuke Yagi(patchgi)</h1>
-									<p>Meiji University</p>
-									<p>WatanabeLab</p>
+									<p>Meiji University</p><br>
+						
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
