--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<header>
 									<h1>Kosuke Yagi(patchgi)</h1>
 									<p>Meiji University</p><br>
-						
+
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
@@ -70,6 +70,9 @@
 										</div>
 										<div class="4u$ 12u$(mobile)">
 											<a href="./wired.html" class="image fit"><img src="images/wired.png" alt=""></a>
+										</div>
+										<div class="4u$ 12u$(mobile)">
+											<a href="./taimen.html" class="image fit"><img src="images/taimen.png" alt=""></a>
 										</div>
 									</div>
 								</section>
