--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
 										<div class="4u$ 12u$(mobile)">
 											<a href="./taimen.html" class="image fit"><img src="images/taimen.png" alt=""></a>
 										</div>
+<div class="4u$ 12u$(mobile)">
+											<a href="./todo.html" class="image fit"><img src="images/todo.png" alt=""></a>
+										</div>
+
 									</div>
 								</section>
 							</article>
