デザイン変更

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<li><a href="https://www.facebook.com/patchgi"><i class="icon-facebook"></i></a></li>
 					<li><a href="https://twitter.com/patchgi"><i class="icon-twitter"></i></a></li>
 					<li><a href="https://www.instagram.com/patch9i/"><i class="icon-instagram"></i></a></li>
-					
+
 				</ul>
 			</div>
 
@@ -97,14 +97,14 @@
 				<div class="row animate-box" data-animate-effect="fadeInLeft">
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="arwatch.html">
-							<img src="images/arwatch.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+							<img src="images/ar.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">AR Watch</h3>
 							<p>Image processing, IoT</p>
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="milksense.html">
-							<img src="images/milk.jpeg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+							<img src="images/mil.jpeg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Milk Sense</h3>
 							<p>IoT</p>
 						</a>
@@ -112,7 +112,7 @@
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="lightalk.html">
-							<img src="images/lightalk.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+							<img src="images/light.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Lightalk</h3>
 							<p>Hardware</p>
 						</a>
@@ -120,7 +120,7 @@
 					<div class="clearfix visible-md-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="taimen.html">
-							<img src="images/taimen.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+							<img src="images/tai.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">taimen</h3>
 							<p>WebApp</p>
 						</a>
@@ -128,14 +128,14 @@
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="wire.html">
-							<img src="images/wired.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+							<img src="images/wire.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Wire Interaction</h3>
 							<p>IoT, UI, UX</p>
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="emoly.html">
-							<img src="images/emo.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+							<img src="images/emol.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">emoly</h3>
 							<p>WebApp</p>
 						</a>
@@ -159,7 +159,7 @@
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="aniQ.html">
-							<img src="images/aniQ.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+							<img src="images/ani.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">aniQ</h3>
 							<p>WebApp</p>
 						</a>
