--- a/taimen.html
+++ b/taimen.html
@@ -99,7 +99,7 @@
 
 					<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 						<figure class="text-center">
-							<img src="images/taimen2.png" alt="Free HTML5 Bootstrap" class="img-responsive">
+							<img src="images/tai2.png" alt="Free HTML5 Bootstrap" class="img-responsive">
 						</figure>
 					</div>
 
