--- a/milksense.html
+++ b/milksense.html
@@ -99,7 +99,7 @@
 
 					<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 						<figure class="text-center">
-							<img src="images/milk2.jpeg" alt="Free HTML5 Bootstrap" class="img-responsive">
+							<img src="images/mil2.jpeg" alt="Free HTML5 Bootstrap" class="img-responsive">
 						</figure>
 					</div>
 
