デザイン変更

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Kosuke Yagi<span>See My Portfolio</span></h2>
 				<div class="row animate-box" data-animate-effect="fadeInLeft">
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="arwatch.html">
+						<a href="ARwatch.html">
 							<img src="images/ar.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">AR Watch</h3>
 							<p>Image processing, IoT</p>
