--- a/aniQ.html
+++ b/aniQ.html
@@ -132,7 +132,7 @@
 							<a href="#"><i class="icon-th-large"></i></a>
 						</div>
 						<div class="col-md-4 col-sm-4 col-xs-4 text-center">
-							<a href="arwatch.html"><span>Next Project</span> <i class="icon-long-arrow-right"></i></a>
+							<a href="ARwatch.html"><span>Next Project</span> <i class="icon-long-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
