--- a/milksense.html
+++ b/milksense.html
@@ -128,7 +128,7 @@
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0">
 
 						<div class="col-md-4 col-sm-4 col-xs-4 text-center">
-							<a href="arwatch.html"><i class="icon-long-arrow-left"></i> <span>Previous Project</span></a>
+							<a href="ARwatch.html"><i class="icon-long-arrow-left"></i> <span>Previous Project</span></a>
 						</div>
 						<div class="col-md-4 col-sm-4 col-xs-4 text-center">
 							<a href="#"><i class="icon-th-large"></i></a>
