--- a/wire.html
+++ b/wire.html
@@ -73,9 +73,8 @@
 			<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li class="fh5co-active"><a href="index.html">Home</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -83,10 +82,10 @@
 			<div class="fh5co-footer">
 				<p><small>&copy; 2016 Nitro Free HTML5. All Rights Reserved.</span> <span>Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> <span>Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></span></small></p>
 				<ul>
-					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+					<li><a href="https://www.facebook.com/patchgi"><i class="icon-facebook"></i></a></li>
+					<li><a href="https://twitter.com/patchgi"><i class="icon-twitter"></i></a></li>
+					<li><a href="https://www.instagram.com/patch9i/"><i class="icon-instagram"></i></a></li>
+
 				</ul>
 			</div>
 
