--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
 	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="YAGI.ME" />
-	<meta name="twitter:image" content="https://yagi.me/images/logo.png" />
-	<meta name="twitter:url" content="https://yagi.me" />
-	<meta name="twitter:card" content="summary_large_image" />
-
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@nytimes">
+	<meta name="twitter:creator" content="@SarahMaslinNir">
+	<meta name="twitter:title" content="Parade of Fans for Houston’s Funeral">
+	<meta name="twitter:description" content="NEWARK - The guest list and parade of limousines with celebrities emerging from them seemed more suited to a red carpet event in Hollywood or New York than than a gritty stretch of Sussex Avenue near the former site of the James M. Baxter Terrace public housing project here.">
+	<meta name="twitter:image:src" content="http://graphics8.nytimes.com/images/2012/02/19/us/19whitney-span/19whitney-span-articleLarge.jpg">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
