twitterカード設定

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 	<meta property="og:url" content=""/>
 	<meta property="og:site_name" content=""/>
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="@nytimes">
-	<meta name="twitter:creator" content="@SarahMaslinNir">
-	<meta name="twitter:title" content="Parade of Fans for Houston’s Funeral">
-	<meta name="twitter:description" content="NEWARK - The guest list and parade of limousines with celebrities emerging from them seemed more suited to a red carpet event in Hollywood or New York than than a gritty stretch of Sussex Avenue near the former site of the James M. Baxter Terrace public housing project here.">
-	<meta name="twitter:image:src" content="http://graphics8.nytimes.com/images/2012/02/19/us/19whitney-span/19whitney-span-articleLarge.jpg">
+	<meta name="twitter:site" content="@patchgi">
+	<meta name="twitter:creator" content="@patchgi">
+	<meta name="twitter:title" content="YAGI.ME">
+	<meta name="twitter:description" content="パッチギのポートフォリオ">
+	<meta name="twitter:image:src" content="https://scontent.xx.fbcdn.net/v/t1.0-0/p206x206/11949555_1624723184468322_3394768211337374025_n.jpg?oh=62d1b21befc38884b67facc8118e2f39&oe=598D4C2A">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
