--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<meta name="twitter:creator" content="@patchgi">
 	<meta name="twitter:title" content="YAGI.ME">
 	<meta name="twitter:description" content="パッチギのポートフォリオ">
-	<meta name="twitter:image:src" content="https://scontent.xx.fbcdn.net/v/t1.0-0/p206x206/11949555_1624723184468322_3394768211337374025_n.jpg?oh=62d1b21befc38884b67facc8118e2f39&oe=598D4C2A">
+	<meta name="twitter:image:src" content="https://yagi.me/images/logo.png">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
