twitterカード設定

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<meta name="twitter:creator" content="@patchgi">
 	<meta name="twitter:title" content="YAGI.ME">
 	<meta name="twitter:description" content="パッチギのポートフォリオ">
-	<meta name="twitter:image:src" content="https://yagi.me/images/logo.png">
+	<meta name="twitter:image:src" content="https://yagi.me/images/logo_l.png">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
