スタイル修正

--- a/ARwatch.html
+++ b/ARwatch.html
@@ -109,7 +109,7 @@
 							<p>AR技術を利用したスマートウォッチ</p>
 
 							<p>スマートフォンでページをスクロールするようにARマーカーが描かれたブレスレットを回転させることでアプリケーションを切り替えることができる。</p>
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/g2lwau1TT1c" frameborder="0" allowfullscreen></iframe>
+							<iframe style = "width:100%" src="https://www.youtube.com/embed/g2lwau1TT1c" frameborder="0" allowfullscreen></iframe>
 							<blockquote class="twitter-tweet" data-lang="ja"><p lang="ja" dir="ltr">授業の課題で作ったAR時計が個人的に気に入ってる<br><br>特にスクロールでアプリを変えれる部分が好き<a href="https://twitter.com/hashtag/CV?src=hash">#CV</a> <a href="https://t.co/57IdWfpbz8">pic.twitter.com/57IdWfpbz8</a></p>&mdash; パッチギ (@patchgi) <a href="https://twitter.com/patchgi/status/819129770910699521">2017年1月11日</a></blockquote>
 							<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 						</div>
