--- a/milksense.html
+++ b/milksense.html
@@ -109,7 +109,7 @@
 
 							<p>牛乳パックの重量から残量を把握し、その値に応じてWebブラウザへの残量表示やスマートフォンへの通知を行うIoTデバイス</p>
 							<p><a href="http://www.ntticc.or.jp/ja/exhibitions/2016/os2016-rd-watanabe-keita-laboratory/">NTT ICC</a>にて展示</p>
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/Jy0VEdaCdzk" frameborder="0" allowfullscreen></iframe>
+							<iframe style="width:100%" src="https://www.youtube.com/embed/Jy0VEdaCdzk" frameborder="0" allowfullscreen></iframe>
 						</div>
 
 						<div class="col-md-3 col-md-pull-9 fh5co-services">
