--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="back">
             <video class="responsive-video" autoplay="autoplay" loop="loop" muted poster="image/home.jpg">
-                <source src="image/zemi.mp4" type="video/mp4">
+                <source src="image/zemi.m4v" type="video/mp4">
             </video>
             <div class="cover"></div>
         </div>
