--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
 <body>
     <header>
         <div class="back">
-            <!-- <video class="responsive-video" autoplay="autoplay" loop="loop" muted poster="image/home.jpg">
-                <source src="image/zemi.mp4">
-            </video> -->
-            <iframe src="https://www.youtube.com/embed/g2lwau1TT1c?autoplay=1&controls=0&disablekb=1&loop=1&iv_load_policy=3&showinfo=0&rel=0&playlist=g2lwau1TT1c&modestbranding=1"
-                frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <img src="image/ar.gif">
             <div class="cover"></div>
         </div>
         <div class="main">
