--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
     <header>
         <div class="back">
-            <iframe class="movie" src="https://www.youtube.com/embed/g2lwau1TT1c?autoplay=1&controls=0&disablekb=1&loop=1&iv_load_policy=3&showinfo=0&rel=0&playlist=g2lwau1TT1c&modestbranding=1"
-                frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <div class="player">
+                <iframe class="movie" src="https://www.youtube.com/embed/g2lwau1TT1c?autoplay=1&controls=0&disablekb=1&loop=1&iv_load_policy=3&showinfo=0&rel=0&playlist=g2lwau1TT1c&modestbranding=1"
+                    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
             <div class="cover"></div>
         </div>
         <div class="main">
