--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/earlyaccess/roundedmplus1c.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -27,10 +28,105 @@
             </div>
     </header>
     <article>
-        <div class="container center">
+        <div class="header green-text pro">
+            $
         </div>
-    </article>
 
+        <ul class="projects green-text">
+            <li class="project">
+                <div>
+                    <a href="#">
+                        <img src="image/ar.png">
+                        <article>
+                            <h4>ARWatch</h4>
+                            <p>ARマーカーを利用した腕時計</p>
+                        </article>
+                    </a>
+                </div>
+            </li>
+            <li class="project">
+                <div>
+                    <a href="#">
+                        <img src="image/lightalk.png">
+                        <article>
+                            <h4>Lightalk</h4>
+                            <p>光と音声を同期させたライトスタンド型プレゼンテーションシステム</p>
+                        </article>
+                    </a>
+                </div>
+            </li>
+            <li class="project">
+                <div>
+                    <a href="#">
+                        <img src="image/ex2.png">
+                        <article>
+                            <h4 class="ja">研究室展示</h4>
+                            <p>所属している研究室で行っているプロジェクトの展示会進行</p>
+                        </article>
+                    </a>
+                </div>
+            </li>
+            <li class="project">
+                <div>
+                    <a href="#">
+                        <img src="image/pc.png">
+                        <article>
+                            <h4>Physical Certification</h4>
+                            <p>チューリングテストの題材として日常生活のタスクを出題するシステム
+                            </p>
+                        </article>
+                    </a>
+                </div>
+            </li>
+            <li class="project">
+                <div>
+                    <a href="#">
+                        <img src="image/api.png">
+                        <article>
+                            <h4>my-API</h4>
+                            <p>自らの情報をAPI化してみた
+                            </p>
+                        </article>
+                    </a>
+                </div>
+            </li>
+            <li class="project">
+                <div>
+                    <a href="#">
+                        <img src="image/milk.jpeg">
+                        <article>
+                            <h4>Milk Sense</h4>
+                            <p>牛乳パックにフィットするIoTデバイス
+                            </p>
+                        </article>
+                    </a>
+                </div>
+            </li>
+        </ul>
+        <div class="header green-text">
+            <div>
+                <ul class="careers">
+                    <li class="career">
+                        $
+                    </li>
+                    <br>
+                    <li class="c">
+                        {
+                    </li>
+                    <li class="c ja">
+                        <span>"株式会社Appbank": "Webエンジニア(PHP, Ruby on Rails, Javascript)",</span>
+                    </li>
+                    <li class="c ja">
+                        <span>"株式会社Life is Tech": "メンター(Ruby on Rails, Javascript, OpenFrameWorks)",</span>
+                    </li>
+                    <li class="c">
+                        }
+                    </li>
+                </ul>
+
+            </div>
+
+    </article>
     <script type=" text/javascript " src="js/materialize.min.js "></script>
     <script type=" text/javascript " src="js/main.js " charset="uft-8"></script>
 </body>
