--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link href="https://fonts.googleapis.com/earlyaccess/roundedmplus1c.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@patchgi" />
+    <meta property="og:url" content="https://yagi.me" />
+    <meta property="og:title" content="Kosuke Yagi" />
+    <meta property="og:image" content="https://yagi.me/image/icon.jpg" />
 </head>
 
 <body>
