--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <header>
         <div class="back">
             <div class="player">
-                <iframe class="movie" src="https://www.youtube.com/embed/g2lwau1TT1c?autoplay=1&controls=0&disablekb=1&loop=1&iv_load_policy=3&showinfo=0&rel=0&playlist=g2lwau1TT1c&modestbranding=1"
-                    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div id="player" class="movie"></div>
             </div>
             <div class="cover"></div>
         </div>
@@ -133,6 +132,44 @@
             </div>
 
     </article>
+    <script type="text/javascript">
+        let ua = navigator.userAgent
+        let mobile = false
+        if (ua.indexOf("iPhone") > 0 || ua.indexOf("Android") > 0 || ua.indexOf("iPad") > 0) {
+            mobile = true
+        }
+        if (!mobile) {
+            var tag = document.createElement('script')
+            tag.src = "https://www.youtube.com/iframe_api"
+            var firstScriptTag = document.getElementsByTagName('script')[0]
+            firstScriptTag.parentNode.insertBefore(tag, firstScriptTag)
+
+            // 3. This function creates an <iframe> (and YouTube player)
+            //    after the API code downloads.
+            var player;
+            function onYouTubeIframeAPIReady() {
+                player = new YT.Player('player', {
+                    videoId: 'g2lwau1TT1c',
+                    playerVars: {
+                        loop: 1,
+                        controls: 0,
+                        autoplay: 1,
+                        rel: 0,
+                        showinfo: 0,
+                        playlist: "g2lwau1TT1c"
+                    },
+                    events: {
+                        'onReady': onPlayerReady,
+                    }
+                });
+            }
+
+            // 4. The API will call this function when the video player is ready.
+            function onPlayerReady(event) {
+                event.target.mute()
+            }
+        }
+    </script>
     <script type=" text/javascript " src="js/materialize.min.js "></script>
     <script type=" text/javascript " src="js/main.js " charset="uft-8"></script>
 </body>
